리스트 렌더링

--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,34 @@ textarea {
   padding: 10px;
   cursor: pointer;
 }
+
+/* list */
+
+.DiaryList {
+  border: 1px solid gray;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+/* item */
+
+.DiaryItem {
+  background-color: #eee;
+  margin-bottom: 10px;
+  padding: 20px;
+}
+
+.DiaryItem .info {
+  border-bottom: 1px solid gray;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+
+.DiaryItem .date {
+  color: gray;
+}
+
+.DiaryItem .content {
+  font-weight: bold;
+  margin: 30px 0;
+}
